--- a/rmq-deploy.yaml
+++ b/rmq-deploy.yaml
@@ -27,4 +27,4 @@ spec:
                 name: app-secret
                 key: rmq-pass
           - name: RABBITMQ_DEFAULT_USER
-            VALUE: "guest"
+            value: "guest"
